# computacion-paralela

./: Data_plots_FLOPS-IPS_vs_N.csv  README.md  plots.py
base/: Makefile  README.md  core.c  meson.build  test.bc
beta/: Data_plots_FLOPS-IPS_vs_N.csv  Makefile  core.c  core.h  help.c  parameters.h  perf.data  test.i  test.s  tiny_md.c  wtime.c
lab1/: README.md  core.h
lab2/: README.md
lab2/new-struct/: Makefile  Plots_Flops_IPS.jl  core.c  core.h  core.i  tiny_md.c  tiny_md.i  viz.i  wtime.i
lab2/split-forces/: .depend  Makefile  core.c  core.h  tiny_md.c
lab3/beta/: Makefile  core.c  core.i  core.s  run_make_tiny_md_1.sh  test.c  tiny_md.c  tiny_md.i  tiny_md.s  wtime.i  wtime.s
lab3/lab1/: .gitignore  Makefile  core.i  core.s  roofline.sh  run_make_tiny_md_2.sh  tiny_md.i  tiny_md.s  viz.c  viz.i  viz.s  wtime.i  wtime.s
lab3/lab1/my_roofline/: my_roofline.advixeproj
lab3/lab1/my_roofline/e000/: callstacks.def  e000.advixeexp  loop_hashes.def  roofline.data  roofline_int.data  roofline_mix.data
lab3/lab1/my_roofline/e000/hs004/: hs004.advixe  issues.xml  metrics.advisum  recommendations.advisum  threading.advisum  vectorization.advisum
lab3/lab1/my_roofline/e000/trc000/: trc000.advixe
lab3/lab1/my_roofline2/: my_roofline2.advixeproj  project_read_only.infoadvixe
lab3/lab1/my_roofline2/e000/: e000.advixeexp
lab3/lab1/my_roofline3/: my_roofline3.advixeproj  project_read_only.infoadvixe
lab3/lab1/my_roofline3/e000/: callstacks.def  e000.advixeexp  loop_hashes.def  roofline.data
tiny_md/: Makefile  core.c  parse_hdump.py  tiny_md.c  wtime.c
(+120 files in other folders)
